cluster/prod/apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels: { app: vaultwarden }
spec:
  replicas: 1
  selector:
    matchLabels: { app: vaultwarden }
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxUnavailable: 0, maxSurge: 1 }
  template:
    metadata:
      labels: { app: vaultwarden }
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server@sha256:efb3cde962015fcc036b2ea625242248611943b27212ebf4392841fb30fad055
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet: { path: "/alive", port: http }
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "1Gi" }
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
      securityContext:
        runAsNonRoot: false
