cluster/prod/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels: { app: vaultwarden }
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector: { app: vaultwarden }
  ports:
    - name: http
      port: 80
      targetPort: http
